--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 80vh;
+    height: 70vh;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.35);
 }
@@ -115,7 +115,23 @@ button:hover{
     background-color: white;
 }
 
-@media (max-width: 850px) and (min-width: 550px){
+footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.8);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    word-spacing: 2px;
+    letter-spacing: 1.1px;
+    height: 10vh;
+    width: 100%;
+    color: #fff;
+}
+
+footer img{
+    cursor: pointer;
+}
+@media (max-width: 900px) and (min-width: 550px){
     .logo{
         font-size: 4vw;
     }
@@ -123,6 +139,9 @@ button:hover{
         font-size: 2vw;
     }
     header{
+        flex-direction: column;
+    }
+    footer{
         flex-direction: column;
     }
 }
@@ -136,6 +155,7 @@ button:hover{
         flex-direction: column;
         justify-content: space-around;
         background-color: rgba(0, 0, 0, 0.5);
+        height: 80vh;
     }
     main ul{
         display: flex;
@@ -189,6 +209,18 @@ button:hover{
    }
    .nav-active{
        transform: translateX(0%);
+   }
+
+   footer{
+    height: auto;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 10px;
+   }
+   #copyright{
+       padding: 20px;
+       text-align: center;
    }
 }
 
